# KitGenBench

./: .pre-commit-config.yaml  LICENSE
examples/: CMakeLists.txt
examples/multi-setup/: CMakeLists.txt
examples/multi-setup-mallocMC/: CMakeLists.txt
examples/multi-setup-mallocMC/source/: main.cpp
examples/multi-setup-runtime/: CMakeLists.txt  README.md
examples/multi-setup-runtime/source/: main.cpp
examples/multi-setup/source/: main.cpp
examples/multi-size-malloc/: CMakeLists.txt
examples/multi-size-malloc/source/: main.cpp
examples/parameter-testing-mallocMC/: CMakeLists.txt
examples/parameter-testing-mallocMC/source/: main.cpp
examples/plain-malloc/source/: main.cpp
examples/simple-mallocMC/: CMakeLists.txt
examples/simple-mallocMC/source/: main.cpp
include/kitgenbench/: kitgenbench.h  setup.h
test/source/: kitgenbench.cpp
